--- a/Testing_1.ipynb
+++ b/Testing_1.ipynb
@@ -6,30 +6,15 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pandas in c:\\programdata\\anaconda3\\lib\\site-packages (1.0.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.6.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas) (2.8.1)\n",
-      "Requirement already satisfied: numpy>=1.13.3 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas) (1.18.1)\n",
-      "Requirement already satisfied: pytz>=2017.2 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas) (2019.3)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\programdata\\anaconda3\\lib\\site-packages (from python-dateutil>=2.6.1->pandas) (1.14.0)\n"
-     ]
-    }
-   ],
    "source": [
-    "# Testing random forest classifier for general classification of 5 types of \n",
-    "# faults in IM by taking 10Hz recorded data for ND, BF, BRF, RM, UR. Dataset \n",
-    "# consists of 10000 rows each for all the specified IM faults.\n",
+    "### Testing random forest classifier for general classification of 5 types of \n",
+    "### faults in IM by taking 10Hz recorded data for ND, BF, BRF, RM, UR. Dataset \n",
+    "### consists of 10000 rows each for all the specified IM faults.\n",
     "\n",
-    "# Comparing RF classifier result with SVM linear and radial kernals.\n",
-    "\n",
-    "!pip install pandas"
+    "### Comparing RF classifier result with SVM linear and radial kernals.\n",
+    "\n"
    ]
   },
   {
@@ -609,15 +594,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Result: With trained test split of 0.90: 0.124 Mean Absolute error / 100% Accuracy \n",
+    "### Using Svm achieved an accuracy of 21.51% with Linear Kernal and\n",
+    "### 29.70% with Radial Kernal"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Result: With trained test split of 0.90: 0.124 Mean Absolute error / 100% Accuracy \n",
-    "# Using Svm achieved an accuracy of 21.51% with Linear Kernal and\n",
-    "# 29.70% with Radial Kernal"
-   ]
+   "source": []
   }
  ],
  "metadata": {
