--- a/Testing_0.ipynb
+++ b/Testing_0.ipynb
@@ -1,42 +1,37 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# Testing random forest classifier for binary operation by taking 10Hz ND and BF \r\n",
-    "# fault of IM and training ML model through 1000 row each data."
-   ],
-   "outputs": [],
-   "metadata": {}
+    "### Testing random forest classifier for binary operation by taking 10Hz ND and BF \n",
+    "### fault of IM and training ML model through 1000 row each data."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import pandas as pd"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "data= pd.read_csv(r'D:\\Acads\\BTP\\Train\\Train10hzbf_nd.csv')"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "source": [
-    "data.head\r\n"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "<bound method NDFrame.head of       X_Value  Acceleration  Acceleration_0  Acceleration_1   Voltage  \\\n",
@@ -68,23 +63,21 @@
        "[2191 rows x 10 columns]>"
       ]
      },
+     "execution_count": 4,
      "metadata": {},
-     "execution_count": 4
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "data.head\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "source": [
-    "# shuffling test data\r\n",
-    "data= data.sample(frac=1)\r\n",
-    "data.head"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "<bound method NDFrame.head of       X_Value  Acceleration  Acceleration_0  Acceleration_1   Voltage  \\\n",
@@ -116,35 +109,34 @@
        "[2191 rows x 10 columns]>"
       ]
      },
+     "execution_count": 5,
      "metadata": {},
-     "execution_count": 5
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "# shuffling test data\n",
+    "data= data.sample(frac=1)\n",
+    "data.head"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import sklearn as sk"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "source": [
-    "# Assigning Time, Acceleration, Voltage readings as X parameter\r\n",
-    "\r\n",
-    "dataset = data.values\r\n",
-    "X = dataset[:,0:9]\r\n",
-    "print(X)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "[[ 4.800000e-02 -1.202605e+00  6.259050e-01 ... -1.709750e-01\n",
       "   7.610000e-04 -6.327000e-03]\n",
@@ -162,114 +154,129 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "# Assigning Time, Acceleration, Voltage readings as X parameter\n",
+    "\n",
+    "dataset = data.values\n",
+    "X = dataset[:,0:9]\n",
+    "print(X)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "source": [
-    "# Assigning identity signature as Y parameter\r\n",
-    "\r\n",
-    "y= dataset[:,9]\r\n",
-    "print(y)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "[0. 0. 1. ... 1. 1. 0.]\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "# Assigning identity signature as Y parameter\n",
+    "\n",
+    "y= dataset[:,9]\n",
+    "print(y)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
-   "source": [
-    "#Split data set into train and testing data\r\n",
-    "\r\n",
-    "from sklearn.model_selection import train_test_split\r\n",
-    "X_train, X_test, y_train, y_test = train_test_split(\r\n",
-    "    X, y, test_size=0.95, random_state=42)"
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "#Split data set into train and testing data\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.95, random_state=42)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 31,
-   "source": [
-    "# Training random forest classifier\r\n",
-    "\r\n",
-    "from sklearn.ensemble import RandomForestClassifier\r\n",
-    "rf = RandomForestClassifier(n_estimators = 1000, random_state = 0)\r\n",
-    "rf.fit(X_train, y_train);"
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "# Training random forest classifier\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "rf = RandomForestClassifier(n_estimators = 1000, random_state = 0)\n",
+    "rf.fit(X_train, y_train);"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 32,
-   "source": [
-    "# Predicting errors by sampling against test data identification result\r\n",
-    "\r\n",
-    "import numpy as np\r\n",
-    "predictions = rf.predict(X_test)\r\n",
-    "errors = abs(predictions - y_test)\r\n",
-    "print('Mean Absolute Error:', round(np.mean(errors), 2), 'degrees.')"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Mean Absolute Error: 0.01 degrees.\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "# Predicting errors by sampling against test data identification result\n",
+    "\n",
+    "import numpy as np\n",
+    "predictions = rf.predict(X_test)\n",
+    "errors = abs(predictions - y_test)\n",
+    "print('Mean Absolute Error:', round(np.mean(errors), 2), 'degrees.')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 35,
-   "source": [
-    "# Calculating model accuracy through adjusting hyperparameters\r\n",
-    "\r\n",
-    "\r\n",
-    "accuracy = 100 - np.mean(errors)\r\n",
-    "print('Accuracy:', round(accuracy, 2), '%.')"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Accuracy: 99.99 %.\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "# Calculating model accuracy through adjusting hyperparameters\n",
+    "\n",
+    "\n",
+    "accuracy = 100 - np.mean(errors)\n",
+    "print('Accuracy:', round(accuracy, 2), '%.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Result: Upto 70% test size: 0 Mean absolute error\n",
+    "###         70%-95% test size: 0.01 Mean absolute error\n",
+    "###         95%              : 0.02 Mean absolute error\n",
+    "###         99%              : 0.24 Mean absolute error"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "source": [
-    "# Result: Upto 70% test size: 0 Mean absolute error\r\n",
-    "#         70%-95% test size: 0.01 Mean absolute error\r\n",
-    "#         95%              : 0.02 Mean absolute error\r\n",
-    "#         99%              : 0.24 Mean absolute error"
-   ],
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "4d86372cfb1be11e6142bae3d72b1b3dd652af7b694241e6e9cb8e4bdf71981c"
+  },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.0 64-bit"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -281,10 +288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
-  },
-  "interpreter": {
-   "hash": "4d86372cfb1be11e6142bae3d72b1b3dd652af7b694241e6e9cb8e4bdf71981c"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
