--- a/Electrical Faults/EL_UL_Phase1.ipynb
+++ b/Electrical Faults/EL_UL_Phase1.ipynb
@@ -3686,7 +3686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4129,20 +4129,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.000000e+00 -2.774430e-01  1.279343e+00 ...  1.885130e-01\n",
+      "  -5.480000e-04 -4.280000e-04]\n",
+      " [ 5.000000e-05 -1.015262e+00  2.737720e-01 ...  1.831080e-01\n",
+      "  -7.290000e-04 -5.050000e-04]\n",
+      " [ 1.000000e-04 -9.664590e-01  6.924530e-01 ...  1.896130e-01\n",
+      "  -4.133000e-03 -4.610000e-04]\n",
+      " ...\n",
+      " [ 1.809985e+01 -3.009220e-01 -2.495300e-02 ...  1.420600e-01\n",
+      "   7.824400e-02  2.280000e-04]\n",
+      " [ 1.809990e+01  3.528800e-02  3.340570e-01 ...  1.375150e-01\n",
+      "   7.872800e-02  2.630000e-04]\n",
+      " [ 1.809995e+01 -7.598160e-01 -4.215350e-01 ...  1.439110e-01\n",
+      "   7.657100e-02  2.570000e-04]]\n",
+      "[1. 1. 1. ... 0. 0. 0.]\n"
+     ]
+    }
+   ],
    "source": [
     "dataset_20=data_20.values\n",
-    "X_20= dataset_20[:,0:9]\n",
+    "X_20= dataset_20[:,0:8]\n",
     "print(X_20)\n",
-    "y_20=dataset_20[:,9]\n",
+    "y_20=dataset_20[:,8]\n",
     "print(y_20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4153,9 +4174,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error 10Hz with 20Hz: 0.684 degrees.\n",
+      "Accuracy: 99.316 %.\n"
+     ]
+    }
+   ],
    "source": [
     "predictions_10 = rf_20.predict(X_test_10)\n",
     "errors_10 = abs(predictions_10 - y_test_10)\n",
@@ -4167,9 +4197,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error 15Hz with 20Hz: 1.411 degrees.\n",
+      "Accuracy: 98.589 %.\n"
+     ]
+    }
+   ],
    "source": [
     "predictions_15 = rf_20.predict(X_test_15)\n",
     "errors_15 = abs(predictions_15 - y_test_15)\n",
