--- a/Electrical Faults/EL_UL_Phase1.ipynb
+++ b/Electrical Faults/EL_UL_Phase1.ipynb
@@ -4220,9 +4220,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error 20Hz with 20Hz: 0.791 degrees.\n",
+      "Accuracy: 99.209 %.\n"
+     ]
+    }
+   ],
    "source": [
     "predictions_20 = rf_20.predict(X_test_20)\n",
     "errors_20 = abs(predictions_20 - y_test_20)\n",
@@ -4234,9 +4243,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error 25Hz with 20Hz: 1.364 degrees.\n",
+      "Accuracy: 98.636 %.\n"
+     ]
+    }
+   ],
    "source": [
     "predictions_25 = rf_20.predict(X_test_25)\n",
     "errors_25 = abs(predictions_25 - y_test_25)\n",
@@ -4248,9 +4266,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error 30Hz with 20Hz: 2.019 degrees.\n",
+      "Accuracy: 97.981 %.\n"
+     ]
+    }
+   ],
    "source": [
     "predictions_30 = rf_20.predict(X_test_30)\n",
     "errors_30 = abs(predictions_30 - y_test_30)\n",
@@ -4262,9 +4289,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error 35Hz with 20Hz: 1.272 degrees.\n",
+      "Accuracy: 98.728 %.\n"
+     ]
+    }
+   ],
    "source": [
     "predictions_35 = rf_20.predict(X_test_35)\n",
     "errors_35 = abs(predictions_35 - y_test_35)\n",
@@ -4276,9 +4312,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error 40Hz with 20Hz: 1.817 degrees.\n",
+      "Accuracy: 98.183 %.\n"
+     ]
+    }
+   ],
    "source": [
     "predictions_40 = rf_20.predict(X_test_40)\n",
     "errors_40 = abs(predictions_40 - y_test_40)\n",
@@ -4297,22 +4342,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.000000e+00  6.755000e-01  1.939533e+00 ...  1.259970e-01\n",
+      "  -4.300000e-04  1.000000e+00]\n",
+      " [ 5.000000e-05  3.716200e-01  1.246192e+00 ...  1.235010e-01\n",
+      "  -4.020000e-04  1.000000e+00]\n",
+      " [ 1.000000e-04 -2.024560e-01  1.480948e+00 ...  1.237060e-01\n",
+      "  -3.730000e-04  1.000000e+00]\n",
+      " ...\n",
+      " [ 1.859985e+01  4.278665e+00  2.143716e+00 ... -1.481830e-01\n",
+      "   8.170000e-05  0.000000e+00]\n",
+      " [ 1.859990e+01  2.625151e+00  1.303775e+00 ... -1.455280e-01\n",
+      "   5.740000e-05  0.000000e+00]\n",
+      " [ 1.859995e+01  3.041879e+00  1.784338e+00 ... -1.454340e-01\n",
+      "   1.140000e-04  0.000000e+00]]\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "index 9 is out of bounds for axis 1 with size 9",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-15-0da929554b3e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mX_25\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mdataset_25\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m9\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_25\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0my_25\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdataset_25\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m9\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_25\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: index 9 is out of bounds for axis 1 with size 9"
+     ]
+    }
+   ],
    "source": [
     "dataset_25=data_25.values\n",
-    "X_25= dataset_25[:,0:9]\n",
+    "X_25= dataset_25[:,0:8]\n",
     "print(X_25)\n",
-    "y_25=dataset_25[:,9]\n",
+    "y_25=dataset_25[:,8]\n",
     "print(y_25)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'y_25' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-16-b22c856c5622>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mensemble\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mRandomForestClassifier\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mrf_25\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mRandomForestClassifier\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_estimators\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1000\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrandom_state\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m42\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mrf_25\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_25\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_25\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'y_25' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "rf_25 = RandomForestClassifier(n_estimators = 1000, random_state = 42)\n",
